--- a/views/application.erb
+++ b/views/application.erb
@@ -1,5 +1,13 @@
 <html>
   <head>
+    <style>
+    
+    DropioFlashConfig = {
+      uploadEmbed: {
+        onUploadCompleteCallback:function(){alert('uploaded.')};
+      }
+    }
+    </style>
   </head>
   <body>
     <%= yield %>
