implemented first draft of design elements

--- a/views/new.erb
+++ b/views/new.erb
@@ -1,3 +1,5 @@
 <form action='/' method='post'>
+  <label for='description'>Enter a Description:</label>
+  <textarea name='description'></textarea>
   <input type='submit' value='Create A New Dropfolio Now'/>
 </form>
