--- a/views/application.erb
+++ b/views/application.erb
@@ -1,13 +1,15 @@
 <html>
   <head>
-    <style>
-    
-    DropioFlashConfig = {
-      uploadEmbed: {
-        onUploadCompleteCallback:function(){alert('uploaded.')};
-      }
-    }
-    </style>
+    <link rel="stylesheet" href="style.css"/>
+    <script src="jquery-1.3.2.min.js"></script>
+    <script src="jquery.cycle.all.min.js"></script>
+    <script>
+        DropioFlashConfig = {
+          uploadEmbed:{
+            onUploadCompleteCallback:function(){document.location.reload();}
+          }
+        };
+    </script>
   </head>
   <body>
     <%= yield %>
