--- a/views/application.erb
+++ b/views/application.erb
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="/style.css"/>
     <script src="jquery-1.3.2.min.js"></script>
     <script src="jquery.cycle.all.min.js"></script>
     <script>
