--- a/public/style.css
+++ b/public/style.css
@@ -6,14 +6,16 @@ body {
 
 .item {
   display:block;
+  text-align:center;
+  list-style-type:none;
+  padding:0px;
   width:800px;
   height:500px;
-  position: absolute;
   left:50%;
   top:50%;
   margin-top:-250px;
   margin-left:-400px;
-  text-align:center;
+  position: absolute;
 }
 
 .item > * {
