--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,11 @@ a:hover {
   border-bottom:2px dotted #FFFFFF;
 }
 
+.item a {
+  color:#000000;
+  border-bottom-color:#000000;
+}
+
 .item {
   display:block;
   text-align:center;
@@ -33,6 +38,7 @@ a:hover {
   padding:5px;
   margin:auto;
 }
+
 
 form > * {
   display:block;
